--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ SERVER_NAME=laravel.test
 APP_KEY=base64:OQu7JigksevnJcHhdFuEOfYqDjDDY05O8BueXWFLOrI=
 APP_ENV=local
 APP_DEBUG=true
-APP_DEBUG_BAR=false
+DEBUGBAR_ENABLED=false
 USE_CACHE=false
 APP_URL=https://hafen.goldenacker.de
 MIX_API_URL=https://hafen.goldenacker.de
