--- a/.env.example
+++ b/.env.example
@@ -34,8 +34,8 @@ DB_USERNAME=
 DB_PASSWORD=
 
 # reCaptcha v3
-#NOCAPTCHA_SITEKEY=6LfRPlIjAAAAAAUtr5x1GSH3oD_W969fMUTfBOWH
-#NOCAPTCHA_SECRET=6LfRPlIjAAAAAPzeC5Elrt3UZ5TySdA7h54enULu
+#NOCAPTCHA_SITEKEY=
+#NOCAPTCHA_SECRET=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=memcached
