--- a/package.json
+++ b/package.json
@@ -10,76 +10,78 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "browser-sync": "^2.27.5",
+        "browser-sync": "^2.29.3",
         "browser-sync-webpack-plugin": "^2.3.0",
-        "jquery": "^3.6",
-        "laravel-mix": "^6.0.39",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "postcss-import": "^12.0.1",
-        "resolve-url-loader": "^3.1.2",
-        "sass": "^1.43.4",
-        "sass-loader": "^12.3.0",
-        "sass-resources-loader": "^2.2.4",
-        "vue-loader": "^16.8.3"
+        "laravel-mix": "^6.0.49",
+        "postcss": "^8.4.24",
+        "postcss-import": "^15.1.0",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.62.1",
+        "sass-loader": "^13.3.1",
+        "sass-resources-loader": "^2.2.5",
+        "vue-loader": "^17.1.1"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.2.1",
-        "@fortawesome/fontawesome-svg-core": "^6.2.1",
-        "@fortawesome/free-brands-svg-icons": "^6.2.1",
-        "@fortawesome/free-regular-svg-icons": "^6.2.1",
-        "@fortawesome/free-solid-svg-icons": "^6.2.1",
-        "@fullcalendar/core": "^6.0.2",
-        "@fullcalendar/daygrid": "^6.0.2",
-        "@fullcalendar/interaction": "^6.0.2",
-        "@fullcalendar/list": "^6.0.2",
-        "@fullcalendar/moment": "^6.0.2",
-        "@fullcalendar/moment-timezone": "^6.0.2",
-        "@fullcalendar/timegrid": "^6.0.2",
-        "@jridgewell/sourcemap-codec": "^1.4.14",
-        "@popperjs/core": "^2.11.6",
+        "@fortawesome/fontawesome-free": "^6.4.0",
+        "@fortawesome/fontawesome-svg-core": "^6.4.0",
+        "@fortawesome/free-brands-svg-icons": "^6.4.0",
+        "@fortawesome/free-regular-svg-icons": "^6.4.0",
+        "@fortawesome/free-solid-svg-icons": "^6.4.0",
+        "@fullcalendar/core": "^6.1.8",
+        "@fullcalendar/daygrid": "^6.1.8",
+        "@fullcalendar/interaction": "^6.1.8",
+        "@fullcalendar/list": "^6.1.8",
+        "@fullcalendar/moment": "^6.1.8",
+        "@fullcalendar/moment-timezone": "^6.1.8",
+        "@fullcalendar/rrule": "^6.1.8",
+        "@fullcalendar/timegrid": "^6.1.8",
+        "@jridgewell/sourcemap-codec": "^1.4.15",
+        "@popperjs/core": "^2.11.8",
         "@turf/turf": "^6.5.0",
-        "@types/leaflet": "^1.9.0",
-        "@vue-leaflet/vue-leaflet": "^0.6.1",
-        "@vue/compiler-sfc": "^3.2.37",
-        "axios": "^0.27.2",
-        "bootstrap": "^5.2.2",
-        "bootstrap-datepicker": "^1.9.0",
-        "canvas": "^2.10.2",
+        "@types/leaflet": "^1.9.3",
+        "@vue-leaflet/vue-leaflet": "^0.9.0",
+        "@vue/compiler-sfc": "^3.3.4",
+        "axios": "^1.4.0",
+        "bootstrap": "^5.2.3",
+        "bootstrap-datepicker": "^1.10.0",
+        "canvas": "^2.11.2",
         "cors": "^2.8.5",
-        "dayjs": "^1.10.6",
-        "echarts": "^5.2.2",
-        "froala-editor": "^4.0.5",
+        "dayjs": "^1.11.7",
+        "echarts": "^5.4.2",
+        "froala-editor": "^4.0.19",
         "geolib": "^3.3.3",
-        "include-media": "^1.4.10",
-        "konva": "^8.3.14",
-        "leaflet": "^1.9.3",
+        "include-media": "^2.0.0",
+        "jquery": "^3.7.0",
+        "konva": "^9.0.2",
+        "leaflet": "^1.9.4",
         "leaflet-draw": "^1.0.4",
-        "leaflet-geometryutil": "^0.10.1",
+        "leaflet-geometryutil": "^0.10.2",
         "leaflet-gpx": "^1.7.0",
         "leaflet-imageoverlay-rotated": "^0.2.1",
-        "leaflet-providers": "^1.12.0",
+        "leaflet-providers": "^1.13.0",
         "leaflet-realtime": "^2.2.0",
         "leaflet-ruler": "^1.0.0",
         "leaflet-sidebar": "^0.2.4",
         "leaflet.boatmarker": "^1.1.5",
         "leaflet.fullscreen": "^2.4.0",
-        "mapbox-gl": "^2.9.1",
+        "lodash": "^4.17.21",
+        "mapbox-gl": "^2.15.0",
         "material-design-icons": "^3.0.1",
         "mitt": "^3.0.0",
-        "moment": "^2.29.2",
-        "moment-timezone": "^0.5.40",
+        "moment": "^2.29.4",
+        "moment-timezone": "^0.5.43",
         "require": "^0.4.4",
+        "rrule": "^2.7.2",
         "select2": "^4.1.0-rc.0",
-        "tinymce": "^6.3.1",
+        "tinymce": "^6.4.2",
         "toastr": "^2.1.4",
-        "vue": "^3.2.37",
+        "vue": "^3.3.4",
         "vue-cli-plugin-fontawesome": "^0.3.1",
-        "vue-echarts": "^6.1.0",
+        "vue-echarts": "^6.5.5",
         "vue-konva": "^3.0.2",
-        "vue-router": "^4.0.16",
+        "vue-router": "^4.2.1",
         "vue-spinner": "^1.0.4",
-        "vuex": "^4.0.2",
+        "vuex": "^4.1.0",
         "vuex-map-fields": "^1.4.1"
     }
 }
