--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
-APP_NAME="Hafen Liebe Achterwasser"
+APP_NAME="HafenLiebe Usedom"
 APP_PLATFORM=
 APP_PORT=80
 APP_SERVICE=laravel.test
 SERVER_NAME=laravel.test
 APP_KEY=base64:OQu7JigksevnJcHhdFuEOfYqDjDDY05O8BueXWFLOrI=
-APP_ENV=local
-APP_DEBUG=true
+APP_ENV=production
+APP_DEBUG=false
 DEBUGBAR_ENABLED=false
 USE_CACHE=false
-APP_URL=https://hafen.goldenacker.de
-MIX_API_URL=https://hafen.goldenacker.de
+APP_URL=https://hafenliebe.goldenacker.de
+MIX_API_URL=https://hafenliebe.goldenacker.de
 MIX_NAVIONICS_TOKEN=
 MIX_MAPBOX_TOKEN=
 #MIX_API_KEY=GI7SFNVFEtLOTZn8IZZlE1EsVJXFJxKcP0hazSolxRM
