--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME="HafenLiebe Usedom"
+APP_NAME="HafenLiebe Usedom  DEMO"
 APP_PLATFORM=
 APP_PORT=80
 APP_SERVICE=laravel.test
@@ -29,7 +29,7 @@ DB_HOST=127.0.0.1
 #DB_HOST=mariadb
 DB_PORT=3306
 FORWARD_DB_PORT=3308
-DB_DATABASE=port
+DB_DATABASE=port-demo
 DB_USERNAME=
 DB_PASSWORD=
 
