--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,7 @@ DB_HOST=127.0.0.1
 #DB_HOST=mariadb
 DB_PORT=3306
 FORWARD_DB_PORT=3308
-DB_DATABASE=port-demo
+DB_DATABASE=port
 DB_USERNAME=
 DB_PASSWORD=
 
