--- a/composer.json
+++ b/composer.json
@@ -6,56 +6,50 @@
     "license": "MIT",
     "require": {
         "php": "^8.0|^8.1|^8.2",
-        "barryvdh/laravel-debugbar": "^3.6",
+        "barryvdh/laravel-debugbar": "^3.8",
         "barryvdh/laravel-dompdf": "^2.0",
-        "barryvdh/laravel-ide-helper": "^2.10",
+        "barryvdh/laravel-ide-helper": "^2.13",
         "berndengels/laravel-email-exceptions": "dev-master",
-        "fideloper/proxy": "^4.4",
-        "fruitcake/laravel-cors": "^2.0",
-        "graham-campbell/markdown": "^13.1",
-        "grimzy/laravel-mysql-spatial": "^4.0",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "fruitcake/laravel-cors": "dev-develop",
+        "graham-campbell/markdown": "^15.0",
+        "guzzlehttp/guzzle": "^7.7",
         "intervention/image": "^2.7",
-        "kyslik/column-sortable": "^6.4",
-        "laravel/framework": "^8.64",
-        "laravel/passport": "^10.1",
-        "laravel/sanctum": "^2.6",
-        "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.3",
-        "livewire/livewire": "^2.10",
+        "kyslik/column-sortable": "^6.5",
+        "laravel/framework": "^10.13",
+        "laravel/passport": "^11.8",
+        "laravel/sanctum": "^3.2",
+        "laravel/tinker": "^2.8",
+        "laravel/ui": "^4.2",
+        "livewire/livewire": "^2.12",
         "maatwebsite/excel": "^3.1",
-        "mews/captcha": "^3.2",
+        "mews/captcha": "^3.3",
         "mobiledetect/mobiledetectlib": "^2.8",
-        "phpoffice/phpspreadsheet": "^1.18",
-        "protonemedia/laravel-form-components": "^3.6",
+        "phpoffice/phpspreadsheet": "^1.29",
+        "protonemedia/laravel-form-components": "^3.8",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/db-dumper": "^3.3",
-        "spatie/emoji": "^3.0",
         "spatie/laravel-db-snapshots": "^2.5",
-        "spatie/laravel-google-fonts": "^1.0",
-        "spatie/laravel-medialibrary": "^9.8",
-        "spatie/laravel-permission": "^5.1",
-        "spatie/period": "^2.3",
+        "spatie/laravel-google-fonts": "^1.2",
+        "spatie/laravel-medialibrary": "^10.9",
+        "spatie/laravel-permission": "^5.10",
+        "spatie/period": "^2.4",
         "spatie/temporary-directory": "^2.1",
-        "symfony/browser-kit": "^6.0",
-        "symfony/dom-crawler": "^5.3",
-        "symfony/mailer": "^6.0",
+        "symfony/browser-kit": "^6.3",
+        "symfony/dom-crawler": "^6.3",
+        "symfony/mailer": "^6.3",
         "umulmrum/holiday": "^0.6.0"
     },
     "require-dev": {
-        "brianium/paratest": "^6.3",
-        "facade/ignition": "^2.5",
-        "fakerphp/faker": "^1.9.1",
-        "helmich/phpunit-json-assert": "^3.4",
-        "kitloong/laravel-migrations-generator": "^4.5",
-        "laravel/dusk": "^6.19",
+        "brianium/paratest": "^7.2",
+        "fakerphp/faker": "^1.23",
+        "helmich/phpunit-json-assert": "^3.5",
+        "kitloong/laravel-migrations-generator": "^6.10",
+        "laravel/dusk": "^7.7",
         "laravel/envoy": "^2.8",
-        "laravel/sail": "^1.20",
-        "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
-        "phpstan/phpstan": "^1.0",
-        "phpunit/phpunit": "^9.3.3",
-        "ryoluo/sail-ssl": "^1.2"
+        "mockery/mockery": "^1.6",
+        "nunomaduro/collision": "^7.6",
+        "phpstan/phpstan": "^1.10",
+        "phpunit/phpunit": "^10.2"
     },
     "allow-plugins": true,
     "autoload": {
