--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
         "@fullcalendar/list": "^6.1.8",
         "@fullcalendar/moment": "^6.1.8",
         "@fullcalendar/moment-timezone": "^6.1.8",
+        "@fullcalendar/multimonth": "^6.1.8",
+        "@fullcalendar/resource-timeline": "^6.1.8",
         "@fullcalendar/rrule": "^6.1.8",
         "@fullcalendar/timegrid": "^6.1.8",
         "@fullcalendar/vue3": "^6.1.8",
