--- a/package.json
+++ b/package.json
@@ -74,9 +74,10 @@
         "mitt": "^3.0.0",
         "moment": "^2.29.4",
         "moment-timezone": "^0.5.43",
-        "require": "^0.4.4",
+        "requirejs": "^2.3.6",
         "rrule": "^2.7.2",
         "select2": "^4.1.0-rc.0",
+        "svgo": "^3.0.2",
         "tinymce": "^6.4.2",
         "toastr": "^2.1.4",
         "vue": "^3.3.4",
