--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "graham-campbell/markdown": "^15.0",
         "guzzlehttp/guzzle": "^7.7",
         "intervention/image": "^2.7",
+        "jenssegers/agent": "^2.6",
         "kyslik/column-sortable": "^6.5",
         "laravel/framework": "^10.13",
         "laravel/passport": "^11.8",
