bugfix price calculation, check fpr model instance

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,8 @@ APP_ENV=production
 APP_DEBUG=false
 DEBUGBAR_ENABLED=false
 USE_CACHE=false
-APP_URL=https://hafenliebe.goldenacker.de
-MIX_API_URL=https://hafenliebe.goldenacker.de
+APP_URL=https://harbor-manager.test
+MIX_API_URL=https://harbor-manager.test
 MIX_NAVIONICS_TOKEN=
 MIX_MAPBOX_TOKEN=
 #MIX_API_KEY=GI7SFNVFEtLOTZn8IZZlE1EsVJXFJxKcP0hazSolxRM
@@ -29,8 +29,8 @@ DB_HOST=127.0.0.1
 #DB_HOST=mariadb
 DB_PORT=3306
 FORWARD_DB_PORT=3308
-DB_DATABASE=port
-DB_USERNAME=
+DB_DATABASE=port-demo
+DB_USERNAME=root
 DB_PASSWORD=
 
 # reCaptcha v3
