add customer crane, vonage

--- a/.env.example
+++ b/.env.example
@@ -17,9 +17,7 @@ SHOW_ENV=false
 FORCE_SCHEME=https
 #VITE_PORT=5174
 SSL_PORT=443
-
-NEXMO_KEY=
-NEXMO_SECRET=
+MASTER_EMAIL=
 
 LOG_CHANNEL=errorlog
 LOG_LEVEL=debug
@@ -88,3 +86,13 @@ MIX_POSITION_ZOOM=13
 MIX_WEATHER_API_KEY=
 MIX_WEATHER_API_URL="${FORCE_SCHEME}://api.openweathermap.org/data/2.5/weather?lat=%LAT%&lon=%LNG%&lang=de&exclude=minutely&units=metric&APPID="
 MIX_WEATHER_API_ICON_URL="${FORCE_SCHEME}://openweathermap.org/img/w/%ICON%.png"
+
+PRICE_RANGE=""
+
+VONAGE_SMS_FROM="${APP_NAME}"
+VONAGE_APP_NAME="${APP_NAME}"
+VONAGE_KEY=
+VONAGE_SECRET=
+VONAGE_SIGNATURE_SECRET=
+VONAGE_APPLICATION_ID=
+VONAGE_PRIVATE_KEY=./private.key
