--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "berndengels/laravel-email-exceptions": "dev-master",
         "fruitcake/laravel-cors": "dev-develop",
         "graham-campbell/markdown": "^15.0",
-        "guzzlehttp/guzzle": "^7.7",
+        "guzzlehttp/guzzle": "^7.8",
         "intervention/image": "^2.7",
         "jenssegers/agent": "^2.6",
         "kyslik/column-sortable": "^6.5",
@@ -21,6 +21,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
+        "laravel/vonage-notification-channel": "^3.2",
         "livewire/livewire": "^2.12",
         "maatwebsite/excel": "^3.1",
         "mews/captcha": "^3.3",
@@ -38,7 +39,9 @@
         "symfony/browser-kit": "^6.3",
         "symfony/dom-crawler": "^6.3",
         "symfony/mailer": "^6.3",
-        "umulmrum/holiday": "^0.6.0"
+        "umulmrum/holiday": "^0.6.0",
+        "vonage/client": "^4.0",
+        "vonage/vonage-laravel": "^1.0"
     },
     "require-dev": {
         "brianium/paratest": "^7.2",
