--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "jenssegers/agent": "^2.6",
         "kyslik/column-sortable": "^6.5",
         "laravel/framework": "^10.13",
+        "laravel/pail": "^1.2",
         "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
@@ -35,6 +36,7 @@
         "spatie/laravel-google-fonts": "^1.2",
         "spatie/laravel-medialibrary": "^10.9",
         "spatie/laravel-permission": "^5.10",
+        "spatie/laravel-webhook-client": "^3.4",
         "spatie/period": "^2.4",
         "spatie/temporary-directory": "^2.1",
         "symfony/browser-kit": "^6.3",
